--- a/Server/package.json
+++ b/Server/package.json
@@ -11,25 +11,24 @@
   },
   "author": "mscststs",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
-    "babel-runtime": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-preset-stage-1": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "webpack-node-externals": "^1.7.2",
-    "start-server-webpack-plugin": "^2.2.5",
-    "webpack": "^4.17.1",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.4",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/runtime": "^7.8.4",
+    "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^0.1.19",
-    "webpack-cli": "^3.1.0"
+    "start-server-webpack-plugin": "^2.2.5",
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.1.0",
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
+    "@koa/router": "^8.0.8",
+    "fs-extra": "^8.1.0",
     "koa": "^2.8.2",
-    "koa2-cors": "^2.0.6"
+    "koa-router": "^7.4.0",
+    "koa2-cors": "^2.0.6",
+    "mysql2": "^2.1.0"
   }
 }
